--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
                 <div class="image"></div>
                 <div class="title">FILE 3</div>
             </div>
+            <div class="file item">
+                <div class="image"></div>
+                <div class="title">FILE 4</div>
+            </div>
         </div>
     </body>
 </html>
